[package]
name = "rocksdb"
version = "0.5.2"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "*"
json-patch = "2.0.0"
rust-rocksdb = { version = "^0.26", features = ["multi-threaded-cf"] }
serde_json = "1.0.117"
fs2 = "0.4"

[profile.integration-test]
inherits = "dev"
incremental = false

[profile.release]
opt-level = "z" # Оптимизация для размера
lto = true # Включение Link Time Optimization
codegen-units = 1 # Уменьшение количества единиц компиляции для лучшей оптимизации
panic = "abort" # Уменьшение объема кода для обработки паник
strip = true # Удаление символов отладки

[dev-dependencies]
rand = "0.8.5"

[features]
no_main = []